fixed test infrastructure
* when spawning a VM to have a separate client or server, use the process IO to ensure everything is working properly and avoid race condition
* display the stack trace of the spawned VM if it not working as expected